# ma-data-assistant

GitHub/: README.md  pyproject.toml
GitHub/contracts/customers/: customers.yaml
GitHub/contracts/input/: customers.yaml
GitHub/contracts/mato/: customer_master.yaml
GitHub/docs/: README.md  generate_docs.py
GitHub/notebooks/: main_customers_breakdown.ipynb
GitHub/notebooks/.ipynb_checkpoints/: main_nb-checkpoint.ipynb
GitHub/src/ma_migration/contracts/: __init__.py  loader.py  report.py  runner.py
GitHub/src/ma_migration/contracts - pending/: rules.py
GitHub/src/ma_migration/core/: contracts.py  dates.py  dedupe.py  io.py  result.py  strings.py  types - obsolete.py  types.py  validation.py
GitHub/src/ma_migration/core - pending/: dedupe.py  types - pending.py
GitHub/src/ma_migration/domains/customer_master_merge/: config.py  pipeline.py  transforms.py
GitHub/src/ma_migration/domains/customers/: config.py  pipeline.py  transforms.py  validations.py
GitHub/src/ma_migration/domains/files_generation/: pipeline.py
GitHub/src/ma_migration/domains/finishing_method/: config.py  pipeline.py
GitHub/src/ma_migration/domains/invoicing_customers/: config.py  pipeline.py
GitHub/src/ma_migration/domains/lockers_wearers/: config.py  pipeline.py  schema.py
GitHub/src/ma_migration/domains/product_features/: pipeline.py
GitHub/src/ma_migration/domains/products_sizes/: pipeline.py
GitHub/src/ma_migration/pipelines/: customers_breakdown.py
GitHub/tests/: conftest.py  test_contracts.py  test_customers.py
(+1 files in other folders)
